5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1709_3062.log
== TEST (2019-05-02 10:05:44) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = int(input("nome da arma: ")).upper()
f = int(input("fator de sucesso: ")

print(a)
-- ERROR:
File "XXXX", line 5
    print(a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:17:19) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = int(input("nome da arma: ")).upper()
f = int(input("fator de sucesso: ")
		  	  
if (po>0):
	if(po >= 100) and (a=="ESPADA"):
		print(f * 10)
	else:
		if (po <=30) and (a=="MACHADO"):
			print(f+3)
		else:
		  if(po < 100) and (po>50):
		  	if (b =="MARRETA"):
		  		print(d + 5)
		  	
-- ERROR:
File "XXXX", line 5
    if (po>0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:18:21) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = int(input("nome da arma: ")).upper()
f = int(input("fator de sucesso: ")
		  	  
if (po>0):
	if(po >= 100) and (a=="ESPADA"):
		print(f * 10)
	else:
		if (po <=30) and (a=="MACHADO"):
			print(f+3)
		else:
		  if(po < 100) and (po>50) and (a == "MARRETA") :
		  	print(d + 5)
		  	
-- ERROR:
File "XXXX", line 5
    if (po>0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:18:33) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = int(input("nome da arma: ")).upper()
f = int(input("fator de sucesso: ")
		  	  
if (po>0)
	if(po >= 100) and (a=="ESPADA"):
		print(f * 10)
	else:
		if (po <=30) and (a=="MACHADO"):
			print(f+3)
		else:
		  if(po < 100) and (po>50) and (a == "MARRETA") :
		  	print(d + 5)
		  	
-- ERROR:
File "XXXX", line 6
    if(po >= 100) and (a=="ESPADA"):
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:18:44) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = int(input("nome da arma: ")).upper()
f = int(input("fator de sucesso: "))
		  	  
if (po>0):
	if(po >= 100) and (a=="ESPADA"):
		print(f * 10)
	else:
		if (po <=30) and (a=="MACHADO"):
			print(f+3)
		else:
		  if(po < 100) and (po>50) and (a == "MARRETA") :
		  	print(d + 5)
		  	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int(input()).upper()
ValueError: invalid literal for int() with base 10: 'ESPADA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:19:16) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = int(input("nome da arma: ".upper()))
f = int(input("fator de sucesso: "))
		  	  
if (po>0):
	if(po >= 100) and (a=="ESPADA"):
		print(f * 10)
	else:
		if (po <=30) and (a=="MACHADO"):
			print(f+3)
		else:
		  if(po < 100) and (po>50) and (a == "MARRETA") :
		  	print(d + 5)
		  	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int(input("nome da arma: ".upper()))
ValueError: invalid literal for int() with base 10: 'ESPADA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:19:43) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = int(input("nome da arma: "))
f = int(input("fator de sucesso: "))
		  	  
if (po>0):
	if(po >= 100) and (a=="ESPADA"):
		print(f * 10)
	else:
		if (po <=30) and (a=="MACHADO"):
			print(f+3)
		else:
		  if(po < 100) and (po>50) and (a == "MARRETA") :
		  	print(d + 5)
		  	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'ESPADA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:19:58) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = int(input("nome da arma: ")).ipper()
f = int(input("fator de sucesso: "))
		  	  
if (po>0):
	if(po >= 100) and (a=="ESPADA"):
		print(f * 10)
	else:
		if (po <=30) and (a=="MACHADO"):
			print(f+3)
		else:
		  if(po < 100) and (po>50) and (a == "MARRETA") :
		  	print(d + 5)
		  	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int(input()).ipper()
ValueError: invalid literal for int() with base 10: 'ESPADA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:20:14) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = int(input("nome da arma: ")).upper()
f = int(input("fator de sucesso: "))
		  	  
if (po>0):
	if(po >= 100) and (a=="ESPADA"):
		print(f * 10)
	else:
		if (po <=30) and (a=="MACHADO"):
			print(f+3)
		else:
		  if(po < 100) and (po>50) and (a == "MARRETA") :
		  	print(d + 5)
		  	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int(input()).upper()
ValueError: invalid literal for int() with base 10: 'ESPADA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:20:50) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = int(input("nome da arma: "))
f = int(input("fator de sucesso: "))
		  	  
if (po>0):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		if (po <=30) and (a.upper()=="MACHADO"):
			print(f+3)
		else:
		  if(po < 100) and (po>50) and (a.upper() == "MARRETA") :
		  	print(d + 5)
		  	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'ESPADA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:21:05) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: "))
f = int(input("fator de sucesso: "))
		  	  
if (po>0):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		if (po <=30) and (a.upper()=="MACHADO"):
			print(f+3)
		else:
		  if(po < 100) and (po>50) and (a.upper() == "MARRETA") :
		  	print(d + 5)
		  	
-- ERROR:
File "XXXX", line 2
    a = input())
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:21:08) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		if (po <=30) and (a.upper()=="MACHADO"):
			print(f+3)
		else:
		  if(po < 100) and (po>50) and (a.upper() == "MARRETA") :
		  	print(d + 5)
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:21:33) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		if (po <=30) and (a.upper()=="MACHADO"):
			print(f+3)
		else:
		  	if(po < 100) and (po>50) and (a.upper() == "MARRETA") :
		  		print(d + 5)
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:21:47) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		if (po <=30) and (a.upper()=="MACHADO"):
			print(f+3)
		else:
		  	if(po < 100) or (po>50) and (a.upper() == "MARRETA") :
		  		print(d + 5)
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:22:02) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		if (po <=30) and (a.upper()=="MACHADO"):
			print(f+3)
		else:
		  	if(po < 100) or (po>50) and (a.upper() == "MARRETA") :
		  		print(f + 5)
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:26:46) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po <=30) and (a.upper()=="MACHADO"):
			print(f+3)
		else:
			print("PO insuficiente")
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:27:17) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
	if (po <=30) and (a.upper()=="MACHADO"):
		print(f+3)
	else:
		print("PO insuficiente")
		  
		  	
-- OUTPUT:
90
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:28:03) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
	if (po <=30) and (a.upper()=="MACHADO"):
		print(f+3)
	else:
		print("PO insuficiente")
		  
		  	
-- EXECUTION TIME:
0.235486
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
PO insuficiente
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:28:05) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
	if (po <=30) and (a.upper()=="MACHADO"):
		print(f+3)
	else:
		print("PO insuficiente")
		  
		  	
-- OUTPUT:
90
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:29:31) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po <=30) and (a.upper()=="MACHADO"):
			print(f+3)
		else:
			print("PO insuficiente")
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:31:59) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (a.upper()=="MARRETA"):
			if(po > 50)
				print(f+5)
			else:
				print("PO insuficiente")
			
		
		  
		  	
-- ERROR:
File "XXXX", line 11
    if(po > 50)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:32:07) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
			
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:32:24) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
			
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:32:32) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
			
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:35:36) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) and (a.upper()=="machado"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:35:52) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) and (a.upper()=="machado"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:35:55) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) and (a.upper()=="machado"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.172306
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
PO insuficiente
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:36:01) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) and (a.upper()=="machado"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:37:13) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) and (a.upper()=="machado"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:40:12) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po>50) and (a.upper()=="MARRETA")
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) and (po>30) and (a.upper()=="MACHADO")
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- ERROR:
File "XXXX", line 10
    if (po<100) and (po>50) and (a.upper()=="MARRETA")
                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:40:22) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po>50) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) and (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:40:37) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po>50) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) and (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:40:49) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po>50) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) and (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.14078
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:40:52) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po>50) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) and (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:41:17) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po>50) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) and (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.194285
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:41:18) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po>50) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) and (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:12) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po>50) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) and (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:31) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po>50) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) and (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:43:02) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po>50) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) and (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:45:10) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po>50) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.17889
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:45:11) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po>50) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.152032
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
90
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:45:11) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po>50) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.120427
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
90
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:45:12) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po>50) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.141255
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
90
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
90
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:45:12) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po>50) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.146427
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
90
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:45:12) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po>50) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.412812
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:45:13) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po>50) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.360227
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:46:19) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) or po<50 and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.178497
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
PO insuficiente
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:46:21) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) or po<50 and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.15304
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
90
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
90
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:46:21) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) or po<50 and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.195382
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
90
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
90
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:46:22) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) or po<50 and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.380812
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1709/3062/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:46:22) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) or po<50 and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:46:22) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) or po<50 and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.372089
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
PO insuficiente
PO insuficiente
5
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:46:22) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) or po<50 and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.628461
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
PO insuficiente
5
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:46:22) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) or po<50 and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.78039
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1709/3062/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:46:23) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) or po<50 and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.708397
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:46:23) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) or po<50 and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.568779
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
PO insuficiente
5
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:46:23) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) or po<50 and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.457488
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1709/3062/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:46:23) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) or po<50 and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- EXECUTION TIME:
0.460513
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1709/3062/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:46:33) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) or po<50 and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:46:34) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) or po<50 and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) or (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:49:18) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po<50) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) and (po>30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:50:02) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ")
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a.upper()=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po<50) and (a.upper()=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) and (po>=30) and (a.upper()=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:50:41) 
-- CODE:
po = int(input("quantidade de ouro: "))
a = input("nome da arma: ").upper()
f = int(input("fator de sucesso: "))
		  	  
if (po>0) and (f<10) and (f>1):
	if(po >= 100) and (a=="ESPADA"):
		print(f * 10)
	else:
		print("PO insuficiente")
		if (po<100) and (po<50) and (a=="MARRETA"):
			if(po > 50):
				print(f+5)
			else:
				print("PO insuficiente")
				if (po<50) and (po>=30) and (a=="MACHADO"):
					print(f+3)
				else:
					print("PO insuficiente")
else:
	print("Entrada invalida")
		
		  
		  	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
